--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -331,7 +334,8 @@ android:text="CHANGE"
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/sixth"
+     android:layout_marginTop="16dp"
+
             android:orientation="horizontal">
 
             <TextView
@@ -363,6 +367,7 @@ android:text="CHANGE"
         android:id="@+id/card_view"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
+        android:layout_margin="4dp"
         android:layout_marginTop="8dp"
         android:layout_below="@id/card_b"
         android:layout_height="200dp"
@@ -422,4 +427,5 @@ android:text="CHANGE"
 
        </LinearLayout>
     </androidx.cardview.widget.CardView>
+</RelativeLayout>
 </RelativeLayout>
